--- a/index.html
+++ b/index.html
@@ -1,11 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="./assets/css/media.css" type="text/css">
+    <link rel="stylesheet" href="./assets/css/stylesheet.css" type="text/css">
+    <link rel="stylesheet" href="./assets/css/style.css" type="text/css">
 </head>
+
 <body>
-    
+    <header>
+
+        <nav class="navbar-expand-md ">
+                <div class="position-fixed top-50 navigation ">
+                    <aside>
+                        <div class="collapse navbar-collapse flex-column align-items-start ">
+                        <ul class="navbar-nav flex-column">
+                            <li class="my-2 ">
+                                <a href="javascript:void(0)" class="nav-link" style="color: white;">
+                                    <i class="bi bi-house fs-5 me-2"></i>
+                                    Home
+                                </a>
+                            </li>
+                            <li class="my-2">
+                                <a href="javascript:void(0)" class="nav-link">
+                                     <i class="bi bi-person fs-4  me-2"></i>
+                                    About
+                                </a>
+                            </li>
+                            <li class=" my-2">
+                                <a href="javascript:void(0)" class="nav-link">
+                                   <i class="bi bi-file-earmark-text fs-4  me-2"></i>
+                                    Resume
+                                </a>
+                            </li>
+                            <li class="my-2">
+                                <a href="javascript:void(0)" class="nav-link">
+                                    <i class="bi bi-images fs-4  me-2"></i>
+                                    Portfolio
+                                </a>
+                            </li>
+                            <li class="my-2">
+                                <a href="javascript:void(0)" class="nav-link">
+                                    <i class="bi bi-hdd-stack fs-4  me-2"></i>
+                                    Services
+                                </a>
+                            </li>
+                            <li class="my-2">
+                                <a href="javascript:void(0)" class="nav-link">
+                                    <i class="bi bi-menu-button fs-4  me-2"></i>
+                                    Dropdown
+                                </a>
+                            </li>
+                            <li class="my-2">
+                                <a href="javascript:void(0)" class="nav-link">
+                                  <i class="bi bi-envelope fs-4  me-2"></i>
+                                    Contact
+                                </a>
+                            </li>
+                        </ul>
+                        <ul class="flex-row d-flex list-unstyled social-links mt-3 mb-0">
+                            <li >
+                                <i class="bi bi-twitter-x border rounded-circle  me-2 w-50 h-50"></i>
+                            </li>
+                            <li >
+                                <i class="bi bi-facebook border rounded-circle  me-2 w-50 h-50"></i>
+                            </li>
+                            <li >
+                                <i class="bi bi-instagram border rounded-circle  me-2 w-50 h-50"></i>
+                            </li>
+                            <li>
+                                <i class="bi bi-skype border rounded-circle me-2 w-50 h-50"></i>
+                            </li>
+                            <li ><i class="bi bi-linkedin border rounded-circle me-2 w-50 h-50"></i></li>
+
+                        </ul>
+                    </div>
+                    </aside>
+
+                
+
+                </div>
+            </nav>
+
+    </header>
+    <script src="./assets/js/bootstrap.bundle.min.js" type="text/javascript"></script>
 </body>
+
 </html>
