--- a/index.html
+++ b/index.html
@@ -1,94 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="./assets/css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="./assets/css/media.css" type="text/css">
-    <link rel="stylesheet" href="./assets/css/stylesheet.css" type="text/css">
-    <link rel="stylesheet" href="./assets/css/style.css" type="text/css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="./assets/css/stylesheet.css"
+            type="text/css">
+        <link rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+        <link rel="stylesheet" href="./assets/css/bootstrap.min.css"
+            type="text/css">
+        <link rel="stylesheet" href="./assets/css/media.css" type="text/css">
+        <link rel="stylesheet" href="./assets/css/style.css" type="text/css">
+    </head>
 
-<body>
-    <header>
+    <body>
 
-        <nav class="navbar-expand-md ">
-                <div class="position-fixed top-50 navigation ">
-                    <aside>
-                        <div class="collapse navbar-collapse flex-column align-items-start ">
-                        <ul class="navbar-nav flex-column">
-                            <li class="my-2 ">
-                                <a href="javascript:void(0)" class="nav-link" style="color: white;">
-                                    <i class="bi bi-house fs-5 me-2"></i>
-                                    Home
-                                </a>
-                            </li>
-                            <li class="my-2">
-                                <a href="javascript:void(0)" class="nav-link">
-                                     <i class="bi bi-person fs-4  me-2"></i>
-                                    About
-                                </a>
-                            </li>
-                            <li class=" my-2">
-                                <a href="javascript:void(0)" class="nav-link">
-                                   <i class="bi bi-file-earmark-text fs-4  me-2"></i>
-                                    Resume
-                                </a>
-                            </li>
-                            <li class="my-2">
-                                <a href="javascript:void(0)" class="nav-link">
-                                    <i class="bi bi-images fs-4  me-2"></i>
-                                    Portfolio
-                                </a>
-                            </li>
-                            <li class="my-2">
-                                <a href="javascript:void(0)" class="nav-link">
-                                    <i class="bi bi-hdd-stack fs-4  me-2"></i>
-                                    Services
-                                </a>
-                            </li>
-                            <li class="my-2">
-                                <a href="javascript:void(0)" class="nav-link">
-                                    <i class="bi bi-menu-button fs-4  me-2"></i>
-                                    Dropdown
-                                </a>
-                            </li>
-                            <li class="my-2">
-                                <a href="javascript:void(0)" class="nav-link">
-                                  <i class="bi bi-envelope fs-4  me-2"></i>
-                                    Contact
-                                </a>
-                            </li>
-                        </ul>
-                        <ul class="flex-row d-flex list-unstyled social-links mt-3 mb-0">
-                            <li >
-                                <i class="bi bi-twitter-x border rounded-circle  me-2 w-50 h-50"></i>
-                            </li>
-                            <li >
-                                <i class="bi bi-facebook border rounded-circle  me-2 w-50 h-50"></i>
-                            </li>
-                            <li >
-                                <i class="bi bi-instagram border rounded-circle  me-2 w-50 h-50"></i>
-                            </li>
-                            <li>
-                                <i class="bi bi-skype border rounded-circle me-2 w-50 h-50"></i>
-                            </li>
-                            <li ><i class="bi bi-linkedin border rounded-circle me-2 w-50 h-50"></i></li>
+        <header>
+            <aside>
+                <nav class="navbar-expand-lg navbar">
+                    <button class="navbar-toggler position-fixed end-0 top-0"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#navbarCollapse"
+                        aria-controls="collapse"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon">
+                            <i class="bi bi-list fs-4 open-icon"></i>
+                            <i class="bi bi-x fs-3 close-icon"></i>
+                        </span>
+                    </button>
+                    <div
+                        class="position-fixed top-50 navigation collapse navbar-collapse  "
+                        id="navbarCollapse">
+                        <div class="flex-column align-items-start ">
+                            <ul class="navbar-nav flex-column">
+                                <li class="my-2 ">
+                                    <a href="javascript:void(0)"
+                                        class="nav-link" style="color: white;">
+                                        <i class="bi bi-house fs-5 me-2"></i>
+                                        Home
+                                    </a>
+                                </li>
+                                <li class="my-2">
+                                    <a href="javascript:void(0)"
+                                        class="nav-link">
+                                        <i class="bi bi-person fs-4  me-2"></i>
+                                        About
+                                    </a>
+                                </li>
+                                <li class=" my-2">
+                                    <a href="javascript:void(0)"
+                                        class="nav-link">
+                                        <i
+                                            class="bi bi-file-earmark-text fs-4  me-2"></i>
+                                        Resume
+                                    </a>
+                                </li>
+                                <li class="my-2">
+                                    <a href="javascript:void(0)"
+                                        class="nav-link">
+                                        <i class="bi bi-images fs-4  me-2"></i>
+                                        Portfolio
+                                    </a>
+                                </li>
+                                <li class="my-2">
+                                    <a href="javascript:void(0)"
+                                        class="nav-link">
+                                        <i
+                                            class="bi bi-hdd-stack fs-4  me-2"></i>
+                                        Services
+                                    </a>
+                                </li>
+                                <li class="my-2">
+                                    <a href="javascript:void(0)"
+                                        class="nav-link">
+                                        <i
+                                            class="bi bi-menu-button fs-4  me-2"></i>
+                                        Dropdown
+                                    </a>
+                                </li>
+                                <li class="my-2">
+                                    <a href="javascript:void(0)"
+                                        class="nav-link">
+                                        <i
+                                            class="bi bi-envelope fs-4  me-2"></i>
+                                        Contact
+                                    </a>
+                                </li>
+                            </ul>
+                            <ul
+                                class="flex-row d-flex list-unstyled social-links mt-3 mb-0">
+                                <li
+                                    class="me-2 border rounded-circle text-center ps-2">
+                                    <i class="bi bi-twitter-x  fs-6 me-2 "></i>
+                                </li>
+                                <li
+                                    class="me-2 border rounded-circle text-center ps-2">
+                                    <i class="bi bi-facebook fs-6 me-2 "></i>
+                                </li>
+                                <li
+                                    class="me-2 border rounded-circle text-center ps-2">
+                                    <i class="bi bi-instagram  fs-6 me-2 "></i>
+                                </li>
+                                <li
+                                    class="me-2 border rounded-circle text-center ps-2">
+                                    <i class="bi bi-skype fs-6 me-2 "></i>
+                                </li>
+                                <li
+                                    class="me-2 border rounded-circle text-center ps-2"><i
+                                        class="bi bi-linkedin  me-2 w-50  fs-6"></i></li>
 
-                        </ul>
+                            </ul>
+                        </div>
+
                     </div>
-                    </aside>
+                </nav>
+            </aside>
+        </header>
 
-                
+        <main>
+            <section class="hero">
+                <div class="bg-elements position-absolute">
 
                 </div>
-            </nav>
+                <div class="hero-content position-relative z-2 ps-5">
+                    <div class="container">
+                        <div class="row align-items-center">
+                            <div class="col-lg-6 ">
+                                <div class="hero-detail ">
+                                    <h2 class="snap display-3">
+                                        Snap<span
+                                            class="border border-bottom">Folio</span>
+                                    </h2>
+                                    <h3 class="name h1 ">
+                                        Shaikh Nurul
+                                    </h3>
+                                    <h3 class="proffesion ">
+                                        I am <span class>Fullstack
+                                            Developer</span>
+                                    </h3>
+                                    <p>
+                                        Passionate about creating exceptional
+                                        digital experiences that blend
+                                        innovative design with functional
+                                        development. Let's bring your vision to
+                                        life.
+                                    </p>
+                                    <div class="btn-group button">
+                                        <div
+                                            class="btn btn-light me-3 border rounded-pill fw-medium">
+                                            <a href="javascript:void(0)" class="py-5 text-decoration-none">
+                                                View My Work
+                                            </a>
+                                        </div>
+                                        <div
+                                            class="btn btn-outline-light border rounded-pill fw-bold">
+                                            <a href="javascript:void(0)" class="text-decoration-none">Get In Touch</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="hero-detail-img">
+                                    <img
+                                        src="../BT_Final_Exam_8133/assets/img/carousel-1.jpg"
+                                        alt class="d-block">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
 
-    </header>
-    <script src="./assets/js/bootstrap.bundle.min.js" type="text/javascript"></script>
-</body>
+        <script src="./assets/js/bootstrap.bundle.min.js"
+            type="text/javascript"></script>
+    </body>
 
 </html>
