--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <link rel="stylesheet" href="./assets/css/stylesheet.css"
-            type="text/css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+            rel="stylesheet">
+        <link rel="stylesheet" href="./assets/css/stylesheet.css"
+            type="text/css">
         <link rel="stylesheet" href="./assets/css/bootstrap.min.css"
             type="text/css">
         <link rel="stylesheet" href="./assets/css/media.css" type="text/css">
@@ -94,19 +99,23 @@
                                 class="flex-row d-flex list-unstyled social-links mt-3 mb-0">
                                 <li
                                     class="me-2 border rounded-circle text-center ps-2">
-                                    <i class="bi bi-twitter-x  fs-6 me-2 "></i>
+                                    <i
+                                        class="bi bi-twitter-x  fs-6 me-2 "></i>
                                 </li>
                                 <li
                                     class="me-2 border rounded-circle text-center ps-2">
-                                    <i class="bi bi-facebook fs-6 me-2 "></i>
+                                    <i
+                                        class="bi bi-facebook fs-6 me-2 "></i>
                                 </li>
                                 <li
                                     class="me-2 border rounded-circle text-center ps-2">
-                                    <i class="bi bi-instagram  fs-6 me-2 "></i>
+                                    <i
+                                        class="bi bi-instagram  fs-6 me-2 "></i>
                                 </li>
                                 <li
                                     class="me-2 border rounded-circle text-center ps-2">
-                                    <i class="bi bi-skype fs-6 me-2 "></i>
+                                    <i
+                                        class="bi bi-skype fs-6 me-2 "></i>
                                 </li>
                                 <li
                                     class="me-2 border rounded-circle text-center ps-2"><i
@@ -121,27 +130,28 @@
         </header>
 
         <main>
-            <section class="hero">
+            <section class="hero d-flex align-items-center">
                 <div class="bg-elements position-absolute">
-
+                    <div class="circle circle-1"></div>
+                    <div class="circle circle-2"></div>
                 </div>
-                <div class="hero-content position-relative z-2 ps-5">
+                <div class="hero-content position-relative  ps-5">
                     <div class="container">
                         <div class="row align-items-center">
                             <div class="col-lg-6 ">
                                 <div class="hero-detail ">
-                                    <h2 class="snap display-3">
+                                    <h1 class="snap mb-3">
                                         Snap<span
                                             class="border border-bottom">Folio</span>
-                                    </h2>
-                                    <h3 class="name h1 ">
-                                        Shaikh Nurul
+                                    </h1>
+                                    <h3 class="name h2 mb-3">
+                                        Alexender Chen
                                     </h3>
-                                    <h3 class="proffesion ">
-                                        I am <span class>Fullstack
-                                            Developer</span>
+                                    <h3 class="proffesion mb-3 fw-normal">
+                                        I'm a <span class="fw-bold"
+                                            id="element"></span>
                                     </h3>
-                                    <p>
+                                    <p class="mb-5 para fs-5">
                                         Passionate about creating exceptional
                                         digital experiences that blend
                                         innovative design with functional
@@ -151,21 +161,48 @@
                                     <div class="btn-group button">
                                         <div
                                             class="btn btn-light me-3 border rounded-pill fw-medium">
-                                            <a href="javascript:void(0)" class="py-5 text-decoration-none">
+                                            <a href="javascript:void(0)"
+                                                class="py-5 text-decoration-none">
                                                 View My Work
                                             </a>
                                         </div>
                                         <div
                                             class="btn btn-outline-light border rounded-pill fw-bold">
-                                            <a href="javascript:void(0)" class="text-decoration-none">Get In Touch</a>
+                                            <a href="javascript:void(0)"
+                                                class="text-decoration-none">Get
+                                                In Touch</a>
                                         </div>
                                     </div>
+                                    <ul
+                                        class="flex-row d-flex list-unstyled social-links-2 mt-5 mb-0">
+                                        <li
+                                            class="me-2 border rounded-circle text-center ps-2">
+                                            <i
+                                                class="bi bi-dribbble  fs-5 me-2 "></i>
+                                        </li>
+                                        <li
+                                            class="me-2 border rounded-circle text-center ps-2">
+                                            <i
+                                                class="bi bi-behance fs-5 me-2 "></i>
+                                        </li>
+                                        <li
+                                            class="me-2 border rounded-circle text-center ps-2">
+                                            <i
+                                                class="bi bi-github  fs-5 me-2 "></i>
+                                        </li>
+                                        <li
+                                            class="me-2 border rounded-circle text-center ps-2">
+                                            <i
+                                                class="bi bi-linkedin fs-5 me-2 "></i>
+                                        </li>
+
+                                    </ul>
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="hero-detail-img">
                                     <img
-                                        src="../BT_Final_Exam_8133/assets/img/carousel-1.jpg"
+                                        src="./assets/image/profile-2.webp"
                                         alt class="d-block">
                                 </div>
                             </div>
@@ -173,8 +210,19 @@
                     </div>
                 </div>
             </section>
-        </main>
 
+            <section class="about">
+                
+            </section>
+        </main>
+        <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+   <script>
+    var typed = new Typed('#element', {
+      strings: ['FullStack Developer', 'MERN Devloper'],
+      typeSpeed: 120,
+      loop:true
+    });
+  </script>
         <script src="./assets/js/bootstrap.bundle.min.js"
             type="text/javascript"></script>
     </body>
