--- a/index.html
+++ b/index.html
@@ -212,13 +212,13 @@
             </section>
 
             <section class="about">
-                
+
             </section>
         </main>
         <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
    <script>
     var typed = new Typed('#element', {
-      strings: ['FullStack Developer', 'MERN Devloper'],
+      strings: ['FullStack Developer', 'MERN Developer'],
       typeSpeed: 120,
       loop:true
     });
