--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
 
         <main>
             <section class="hero d-flex align-items-center">
-                <div class="bg-elements position-absolute">
+               <div class="container">
+                 <div class="bg-elements position-absolute">
                     <div class="circle circle-1"></div>
                     <div class="circle circle-2"></div>
                 </div>
@@ -209,6 +210,7 @@
                         </div>
                     </div>
                 </div>
+               </div>
             </section>
 
             <section class="about">
