--- a/index.html
+++ b/index.html
@@ -133,14 +133,10 @@
 
             <section class="hero d-flex align-items-center">
                <div class="container">
-                 <div class="bg-elements position-absolute">
-                    <div class="circle circle-1"></div>
-                    <div class="circle circle-2"></div>
-                </div>
+
 
             <section class="hero ">
 
-                <div class="hero-content position-relative  ps-5">
 
             <section class="hero mt-lg-5">
             
@@ -228,9 +224,9 @@
                     <div class="row">
                         <div class="col-lg-5">
                             <div class="profile-card">
-                                <div class="profile-img w-25 h-25" >
-                                    <img src="./assets/image/profile-2.webp"
-                                        alt class="d-block w-100 h-100">
+                                <div class="profile-img border rounded-circle" >
+                                    <img src="./assets/image/profile-square-3.webp"
+                                        alt class="d-block  border rounded-circle">
                             </div>
                             
                         </div>
